--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "@ng-bootstrap/ng-bootstrap": "17.0.1",
     "@popperjs/core": "2.11.8",
     "bootstrap": "5.3.3",
-    "dayjs": "1.11.13",
+    "dayjs": "^1.11.13",
     "ngx-infinite-scroll": "18.0.0",
     "rxjs": "7.8.1",
     "tslib": "2.8.0",
